k8s-practice/no-resources-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: no-resources-pod
  namespace: quota-test
spec:
  containers:
  - name: nginx
    image: docker.io/library/nginx:latest
    imagePullPolicy: IfNotPresent
