k8s-practice/quota-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: quota-pod-1
  namespace: quota-test
spec:
  containers:
  - name: nginx
    image: docker.io/library/nginx:latest
    imagePullPolicy: IfNotPresent
    resources:
      requests:
        cpu: "300m"
        memory: "300Mi"
